# Glimpse

./: .gitignore  README.md  index.html  package.json  tailwind.config.js  todo.md  vite.config.ts
.github/: release.yml
.github/workflows/: release.yml
src/: App.css  App.tsx  Home.tsx  Onboarding.tsx  Settings.tsx  ToastOverlay.tsx  overlay.tsx  pill.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility_context.rs  analytics.rs  assistive.rs  audio.rs  cloud.rs  correction_detector.rs  crypto.rs  dictionary.rs  downloader.rs  lib.rs  llm_cleanup.rs  local_transcription.rs  main.rs  mode_context.rs  model_manager.rs  permissions.rs  personalization.rs  pill.rs  recorder.rs  settings.rs  shortcuts.rs  storage.rs  toast.rs  transcribe.rs  transcription.rs  transcription_api.rs  tray.rs
src-tauri/src/platform/: mod.rs  overlay.rs  toast.rs
src-tauri/src/platform/default/: overlay.rs  toast.rs
src-tauri/src/platform/macos/: overlay.rs  toast.rs
src/components/: AccountView.tsx  DebugSection.tsx  DictionaryView.tsx  DotMatrix.tsx  Dropdown.tsx  FAQModal.tsx  LlmProviderConfig.tsx  PersonalizationView.tsx  SettingsModal.tsx  TranscriptionItem.tsx  TranscriptionList.tsx  UpdateChecker.tsx  WhatsNewModal.tsx
src/components/auth/: SignIn.tsx
src/components/settings/: AccountView.tsx  LlmProviderConfig.tsx  SettingsModal.tsx  WhatsNewModal.tsx
src/hooks/: useAuth.ts  useCloudTranscription.ts  useSharedAnalyser.ts  useTranscriptions.ts
src/lib/: appwrite.ts  auth.ts  database.ts  functions.ts  index.ts  realtime.ts  storage.ts  transcriptions.ts
