[package]
name = "glimpse"
version = "0.2.0"
description = "Open-source voice-to-text productivity app built with Tauri"
authors = ["LegendarySpy"]
edition = "2021"
repository = "https://github.com/LegendarySpy/Glimpse"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glimpse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
thiserror = "1"
anyhow = "1"
mp3lame-encoder = { version = "0.2", features = ["std"] }
dirs = "5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
webrtc-vad = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
dotenvy = "0.15"
arboard = "3"
core-graphics = "0.23"
mime_guess = "2"
transcribe-rs = "0.1.4"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1.18.1", features = ["v4"] }
minimp3 = "0.5"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tauri-plugin-macos-permissions = "2.3.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-deep-link = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

